[package]
name = "nft-escrow-withdraw"
version = "0.0.1"
authors = ["Nicolas KOWALSKI <kowalski.kowalskin@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
#CosmWasm 
cw-storage-plus = "0.9.0"
cosmwasm-std = { version = "0.16.0" }
cw721 = { version= "0.9.0" }
#Other Modules
thiserror = { version = "1.0.23" }
anyhow = "1.0"

# Local modules
escrow-export-classic = { path = "../../packages/escrow1.0", version = "0.0.1" }


[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
